# CustomProgrammingLanguage

./: CMakeLists.txt  Execute.cpp  Execute.h  README.md  main.cpp  prueba.mrt  todo.md
src/: Constants.cpp  Constants.h  Reader.cpp  Reader.h
src/Commands/: BaseCommand.cpp  BaseCommand.h  PrintCommand.cpp  PrintCommand.h
src/Errors/: BaseError.cpp  BaseError.h
src/Structures/: ListCommand.cpp  ListCommand.h  ListParams.cpp  ListParams.h  ListText.cpp  ListText.h
